--- a/notebooks/DynamicStudy.ipynb
+++ b/notebooks/DynamicStudy.ipynb
@@ -167,18 +167,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 1. Limits study"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from matplotlib.text import Text\n",
     "def do_beamforming(source, mics, frequency_hz):\n",
     "    from generate_doa_results import generate_signals_analytical, generate_signals_pyroom\n",
     "    from audio_stack.beam_former import BeamFormer\n",
@@ -210,8 +204,26 @@
     "        spectrum = beam_former.get_mvdr_spectrum(R,\n",
     "                                                 np.array([frequency_hz]),\n",
     "                                                 inverse='pinv')\n",
+    "    spectrum = (spectrum - np.min(spectrum)) / (np.max(spectrum) - np.min(spectrum))\n",
+    "    spectrum[spectrum < 1e-10] = 1e-10\n",
     "    angles = BeamFormer.theta_scan\n",
     "    return angles, spectrum\n",
+    "\n",
+    "def get_mic_array(n_mic, baseline, method='uniform'):\n",
+    "    if method == 'uniform': \n",
+    "        return np.array([[baseline * n, 0] for n in range(n_mic)])\n",
+    "    elif method == 'circular':\n",
+    "        angle = 2 * np.pi / n_mic\n",
+    "        angles = angle * np.arange(n_mic)\n",
+    "        # makes sure spacing between two mics is always the same.\n",
+    "        radius = baseline / np.sqrt(2 * (1 - np.cos(angle)))\n",
+    "        mics = np.array([[radius * np.cos(angles[n]), \n",
+    "                          radius * np.sin(angles[n])] for n in range(n_mic)] )\n",
+    "        mics[:, 0] += radius\n",
+    "        np.testing.assert_allclose(np.linalg.norm(mics[1, :] - mics[0, :]), baseline)\n",
+    "        return mics\n",
+    "    else:\n",
+    "        raise ValueError(method)\n",
     "\n",
     "def plot_polar(angles, spectrum, ax, log=False):\n",
     "    assert spectrum.shape[0] == 1\n",
@@ -224,8 +236,23 @@
     "    ax.plot(angles, spectrum_chosen, color=f\"C{i}\")\n",
     "    [ax.axvline(angles[idx], color=f\"C{i}\") for idx in indices]\n",
     "    ax.axvline(angle_rad, color='k', ls=\":\")\n",
-    "    ax.set_yticklabels([])\n",
+    "    \n",
+    "    plt.draw()\n",
+    "    yticklabels = ax.get_yticklabels()\n",
+    "    yticks = ax.get_yticks()\n",
+    "    if len(yticklabels) > 3:\n",
+    "        yticks = yticks[-5::2]\n",
+    "        yticklabels = yticklabels[-5::2]\n",
+    "        ax.set_yticks(yticks)\n",
+    "        ax.set_yticklabels(yticklabels)\n",
     "    ax.set_xticklabels([])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. Limits study"
    ]
   },
   {
@@ -237,14 +264,18 @@
     "# constants\n",
     "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
     "from constants import SPEED_OF_SOUND\n",
+    "from plotting_tools import save_fig\n",
     "\n",
     "signal_noise = 1e-3 #1e-2\n",
     "simulation_type = \"analytical\"\n",
     "source_distance = 20\n",
     "time_index = int(2 * source_distance * SPEED_OF_SOUND // FS)\n",
     "freqs = np.fft.rfftfreq(N_BUFFER, 1 / FS)\n",
-    "method = \"das\"; log=False \n",
-    "#method = \"mvdr\"; log=True"
+    "#method = \"das\"; log=False \n",
+    "method = \"mvdr\"; log=True \n",
+    "dir_name = 'plots_doa/theory'\n",
+    "\n",
+    "label = str.upper(method) if method=='das' else str.upper(method) + ' (log)'"
    ]
   },
   {
@@ -264,7 +295,7 @@
     "\n",
     "frequency_desired = 1000\n",
     "baseline_factors = np.arange(-2, 3, step=1)\n",
-    "angle_rad = 0 * np.pi / 180\n",
+    "angle_rad = 180 * np.pi / 180\n",
     "\n",
     "#==== usual stuff \n",
     "source = source_distance * np.array((np.cos(angle_rad), np.sin(angle_rad)))\n",
@@ -280,12 +311,16 @@
     "for i, baseline in enumerate(baselines):\n",
     "    ax = axs[i]\n",
     "    \n",
-    "    mics = np.array([[0, 0], [baseline, 0]])\n",
+    "    mics = get_mic_array(2, baseline, method='uniform')\n",
+    "    \n",
     "    angles, spectrum = do_beamforming(source, mics, frequency_hz)\n",
     "\n",
     "    plot_polar(angles, spectrum, ax, log)\n",
-    "    ax.set_title(f'$b= {baseline/lamda} \\\\lambda$')\n",
-    "axs[0].set_ylabel(str.upper(method))"
+    "    ax.set_title(f'$b= {baseline/baseline_limit} b_f$')\n",
+    "    ax.grid('minor')\n",
+    "    \n",
+    "axs[0].set_ylabel(label)\n",
+    "save_fig(fig, f'{dir_name}/baselines_{method}.pdf')"
    ]
   },
   {
@@ -302,11 +337,9 @@
    "outputs": [],
    "source": [
     "#==== parameters for this experiment\n",
-    "\n",
     "frequency_desired = 1000\n",
     "baseline_factor = -1\n",
-    "angle_rad = 30 * np.pi / 180\n",
-    "\n",
+    "angle_rad = 120 * np.pi / 180\n",
     "n_mics = 2**np.arange(1, 6)\n",
     "\n",
     "#==== usual stuff \n",
@@ -316,19 +349,112 @@
     "baseline_limit = SPEED_OF_SOUND / frequency_hz / 2\n",
     "baseline = baseline_limit * 2.0**baseline_factor\n",
     "\n",
-    "#==== run experiment\n",
-    "fig, axs = plt.subplots(1, len(n_mics), subplot_kw={'projection':'polar'}, sharey=True)\n",
-    "fig.set_size_inches(3*len(n_mics), 3)\n",
-    "for i, n_mic in enumerate(n_mics):\n",
-    "    ax = axs[i]\n",
+    "ys = np.linspace(-baseline, baseline, len(n_mics))[::-1]\n",
+    "for array in ['circular', 'uniform']:\n",
+    "    fig_pos, ax_pos = plt.subplots(subplot_kw={'frameon':False})\n",
+    "\n",
+    "    xmax = 0\n",
+    "    ymax = 0\n",
+    "    #==== run experiment\n",
+    "    fig, axs = plt.subplots(1, len(n_mics), subplot_kw={'projection':'polar'}, sharey=True)\n",
+    "    fig.set_size_inches(3*len(n_mics), 3)\n",
+    "    for i, n_mic in enumerate(n_mics):\n",
+    "        ax = axs[i]\n",
+    "\n",
+    "        mics = get_mic_array(n_mic, baseline, method=array)\n",
+    "        \n",
+    "        if array == 'uniform':\n",
+    "            ax_pos.scatter(mics[:, 0], mics[:, 1]+ys[i])\n",
+    "        elif array == 'circular':\n",
+    "            ax_pos.scatter(mics[:, 0], mics[:, 1])\n",
+    "            \n",
+    "        xmax = max(np.max(mics[:, 0]), xmax)\n",
+    "        ymax = max(np.max(mics[:, 1]), ymax)\n",
+    "\n",
+    "        angles, spectrum = do_beamforming(source, mics, frequency_hz)\n",
+    "        #spectrum = (spectrum - np.min(spectrum)) / (np.max(spectrum) - np.min(spectrum))\n",
+    "\n",
+    "        plot_polar(angles, spectrum, ax, log)\n",
+    "        ax.set_title(f'$N={n_mic}$')\n",
+    "    axs[0].set_ylabel(f\"{label}, {array}\")\n",
     "    \n",
-    "    mics = np.array([[baseline * n, 0] for n in range(n_mic)])\n",
-    "    angles, spectrum = do_beamforming(source, mics, frequency_hz)\n",
+    "    xlim = [-baseline, xmax + baseline]\n",
+    "    ylim = [-baseline*7, baseline*7]\n",
+    "    fig_pos.set_size_inches(5*(xlim[1]-xlim[0])/(ylim[1]-ylim[0]), 5)\n",
+    "    ax_pos.yaxis.set_visible(False)\n",
+    "    ax_pos.xaxis.set_visible(False)\n",
+    "    ax_pos.set_xlim(xlim)\n",
+    "    ax_pos.set_ylim(ylim)\n",
+    "    ax_pos.set_title(array)\n",
     "    \n",
-    "    spectrum = (spectrum - np.min(spectrum)) / (np.max(spectrum) - np.min(spectrum))\n",
+    "    save_fig(fig_pos, f'{dir_name}/number_mics_grow_geometry_{array}.pdf')\n",
+    "    save_fig(fig, f'{dir_name}/number_mics_grow_{method}_{array}.pdf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#==== parameters for this experiment\n",
+    "frequency_desired = 1000\n",
+    "baseline_factor = -1\n",
+    "angle_rad = 120 * np.pi / 180\n",
+    "n_mics = 2**np.arange(1, 6)\n",
+    "\n",
+    "#==== usual stuff \n",
+    "source = source_distance * np.array((np.cos(angle_rad), np.sin(angle_rad)))\n",
+    "freq_index = np.argmin(np.abs(freqs - frequency_desired))\n",
+    "frequency_hz = freqs[freq_index]\n",
+    "baseline_limit = SPEED_OF_SOUND / frequency_hz / 2\n",
+    "baseline = baseline_limit * 2.0**baseline_factor\n",
+    "\n",
+    "ys = np.linspace(-baseline, baseline, len(n_mics))[::-1]\n",
+    "for array in ['circular', 'uniform']:\n",
+    "\n",
+    "    fig_pos, ax_pos = plt.subplots(subplot_kw={'frameon':False})\n",
+    "    xmax = 0\n",
+    "    ymax = 0\n",
+    "\n",
+    "    #==== run experiment\n",
+    "    fig, axs = plt.subplots(1, len(n_mics), subplot_kw={'projection':'polar'}, sharey=True)\n",
+    "    fig.set_size_inches(3*len(n_mics), 3)\n",
+    "    for i, n_mic in enumerate(n_mics):\n",
+    "        ax = axs[i]\n",
+    "\n",
+    "        if array == 'uniform':\n",
+    "            baseline_here = 2 * baseline / (n_mic - 1)\n",
+    "            mics = get_mic_array(n_mic, baseline_here, method=array)\n",
+    "            ax_pos.scatter(mics[:, 0], mics[:, 1]+ys[i])\n",
+    "        elif array == 'circular':\n",
+    "            baseline_here = baseline * np.sqrt(2 * (1 - np.cos(2 * np.pi / n_mic)))\n",
+    "            mics = get_mic_array(n_mic, baseline_here, method=array)\n",
+    "            #ax_pos.scatter(mics[:, 0]+baseline*0.6*i, mics[:, 1])\n",
+    "            ax_pos.scatter(mics[:, 0], mics[:, 1]+ys[i])\n",
+    "            \n",
+    "        #xmax = max(np.max(mics[:, 0]+baseline*0.6*i), xmax)\n",
+    "        xmax = max(np.max(mics[:, 0]), xmax)\n",
+    "        ymax = max(np.max(mics[:, 1]), ymax)\n",
+    "\n",
+    "        angles, spectrum = do_beamforming(source, mics, frequency_hz)\n",
+    "        #spectrum = (spectrum - np.min(spectrum)) / (np.max(spectrum) - np.min(spectrum))\n",
+    "\n",
+    "        plot_polar(angles, spectrum, ax, log)\n",
+    "        ax.set_title(f'$N={n_mic}$')\n",
+    "    axs[0].set_ylabel(f\"{label}, {array}\")\n",
     "    \n",
-    "    plot_polar(angles, spectrum, ax, log)\n",
-    "axs[0].set_ylabel(str.upper(method))"
+    "    xlim = [-baseline, xmax + baseline]\n",
+    "    ylim = [-baseline*2, baseline*2]\n",
+    "    fig_pos.set_size_inches(5*(xlim[1]-xlim[0])/(ylim[1]-ylim[0]), 5)\n",
+    "    ax_pos.yaxis.set_visible(False)\n",
+    "    ax_pos.xaxis.set_visible(False)\n",
+    "    ax_pos.set_xlim(xlim)\n",
+    "    ax_pos.set_ylim(ylim)\n",
+    "    ax_pos.set_title(array)\n",
+    "    \n",
+    "    save_fig(fig_pos, f'{dir_name}/number_mics_geometry_{array}.pdf')\n",
+    "    save_fig(fig, f'{dir_name}/number_mics_{method}_{array}.pdf')"
    ]
   },
   {
@@ -348,9 +474,8 @@
     "\n",
     "frequency_desired = 1000\n",
     "baseline_factor = -1\n",
-    "angle_rads = np.arange(91, step=15) * np.pi / 180\n",
-    "\n",
-    "n_mics = 2**np.arange(1, 6)\n",
+    "angle_rads = np.arange(90,181, step=22.5)[:5] * np.pi / 180\n",
+    "n_mic = 3 \n",
     "\n",
     "#==== usual stuff \n",
     "freq_index = np.argmin(np.abs(freqs - frequency_desired))\n",
@@ -359,18 +484,20 @@
     "baseline = baseline_limit * 2.0**baseline_factor\n",
     "\n",
     "#==== run experiment\n",
-    "fig, axs = plt.subplots(1, len(angle_rads), subplot_kw={'projection':'polar'}, sharey=True)\n",
-    "fig.set_size_inches(3*len(angle_rads), 3)\n",
-    "for i, angle_rad in enumerate(angle_rads):\n",
-    "    ax = axs[i]\n",
-    "    \n",
-    "    source = source_distance * np.array((np.cos(angle_rad), np.sin(angle_rad)))\n",
-    "    mics = np.array([[baseline * n, 0] for n in range(3)])\n",
-    "    \n",
-    "    angles, spectrum = do_beamforming(source, mics, frequency_hz)\n",
-    "    \n",
-    "    plot_polar(angles, spectrum, ax=ax, log=log)\n",
-    "axs[0].set_ylabel(str.upper(method))"
+    "for array in ['circular', 'uniform']:\n",
+    "    fig, axs = plt.subplots(1, len(angle_rads), subplot_kw={'projection':'polar'}, sharey=True)\n",
+    "    fig.set_size_inches(3*len(angle_rads), 3)\n",
+    "    for i, angle_rad in enumerate(angle_rads):\n",
+    "        ax = axs[i]\n",
+    "\n",
+    "        source = source_distance * np.array((np.cos(angle_rad), np.sin(angle_rad)))\n",
+    "        \n",
+    "        mics = get_mic_array(n_mic, baseline, method=array)\n",
+    "        angles, spectrum = do_beamforming(source, mics, frequency_hz)\n",
+    "\n",
+    "        plot_polar(angles, spectrum, ax=ax, log=log)\n",
+    "    axs[0].set_ylabel(f\"{str.upper(method)}, {array}\")\n",
+    "    save_fig(fig, f'{dir_name}/directions_{method}_{array}.pdf')"
    ]
   },
   {
