Add evaluation of new dataset

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -83,7 +83,8 @@
     "\n",
     "#exp_name = \"2021_02_23_wall\";  # old buzzer\n",
     "#exp_name = \"2021_02_25_wall\"; # new buzzer\n",
-    "exp_name = \"2021_04_30_stepper\"; # new hardware\n",
+    "#exp_name = \"2021_04_30_stepper\"; # new hardware\n",
+    "exp_name = \"2021_06_09_stepper\"; # new hardware, new sweep\n",
     "#exp_name = \"2021_03_01_flying\"\n",
     "# exp_name = '2020_12_9_rotating';\n",
     "# exp_name = '2020_11_26_wall';\n",
@@ -127,7 +128,7 @@
     "\n",
     "df_matrix_raw, df_dist, df_freq_raw = data_collector.get_df_matrix()\n",
     "df_matrix, df_freq, indices = prune_df_matrix(\n",
-    "    df_matrix_raw, df_freq_raw, verbose=True\n",
+    "    df_matrix_raw, df_freq_raw, verbose=True, ratio_missing_allowed=0.8\n",
     ")"
    ]
   },
