--- a/notebooks/CleanupAnalysis.ipynb
+++ b/notebooks/CleanupAnalysis.ipynb
@@ -39,7 +39,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp_name = \"2021_04_30_stepper\";  # old buzzer\n",
+    "exp_name = \"2021_04_30_stepper\";   # new hardware\n",
+    "#exp_name = \"2021_06_09_stepper\";  # new hardware, new sweep\n",
     "#exp_name = \"2021_02_23_wall\";  # old buzzer\n",
     "#exp_name = \"2021_02_25_wall\"\n",
     "# new buzzer\n",
@@ -96,10 +97,11 @@
     "fig.set_size_inches(5, 3)\n",
     "im = pcolorfast_custom(ax, data.seconds, freqs, np.log10(spec[:, 0, :]), vmin=1e-5)\n",
     "add_colorbar(fig, ax, im)\n",
-    "xticks = [0, 5, 10]\n",
-    "yticks = [3000, 4000, 5000]\n",
+    "xticks = np.arange(0, max(data.seconds), step=5) \n",
     "ax.set_xticks(xticks)\n",
     "ax.set_xticklabels(xticks)\n",
+    "yticks = [3000, 4000, 5000]\n",
+    "ax.set_ylim(3000, 5000)\n",
     "ax.set_yticks(yticks)\n",
     "ax.set_yticklabels(yticks)\n",
     "ax.set_xlabel('time [s]')\n",
@@ -318,6 +320,13 @@
     "plt.legend()\n",
     "pass"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
