--- a/notebooks/DynamicStudy.ipynb
+++ b/notebooks/DynamicStudy.ipynb
@@ -519,7 +519,7 @@
     "from geometry import Context\n",
     "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
     "\n",
-    "dir_name = 'plots_doa/theory'\n",
+    "dir_name = 'plots_doa/simulation'\n",
     "\n",
     "simulation_type = 'pyroom'\n",
     "#simulation_type = 'analytical'\n",
@@ -618,8 +618,6 @@
     "    for degree in degrees_noisy\n",
     "]\n",
     "\n",
-    "fig = plt.figure()\n",
-    "fig.set_size_inches(5, 5)\n",
     "if mics_noise > 0:\n",
     "    for i, (degree, mics) in enumerate(zip(degrees, mics_list)):\n",
     "        plt.scatter(*mics.T, label=f'noisy {degree:.0f} deg', color=f\"C{i}\")\n",
@@ -627,22 +625,32 @@
     "mics_clean = [\n",
     "    rotate_mics(mics_drone, orientation_deg=degree) for degree in degrees\n",
     "]\n",
-    "for i, (degree, mics) in enumerate(zip(degrees, mics_clean)):\n",
-    "    plt.scatter(*mics.T,\n",
-    "                label=f'mics at {degree:.0f}deg',\n",
-    "                color=f\"C{i}\",\n",
-    "                marker=\"x\")\n",
-    "plt.axis('equal')\n",
-    "mic_radius = np.max(np.linalg.norm(mics, axis=1)) * 2.0\n",
-    "plt.plot([0, mic_radius * np.cos(gt_angle_rad)],\n",
-    "         [0, mic_radius * np.sin(gt_angle_rad)],\n",
-    "         color='k',\n",
-    "         label='source direction')\n",
-    "plt.xlabel('x [m]')\n",
-    "plt.ylabel('y [m]')\n",
-    "plt.title('simulation setup')\n",
-    "plt.legend(bbox_to_anchor=[1, 1], loc='upper left')\n",
-    "save_fig(fig, f'{dir_name}/noiseless-setup.pdf')\n",
+    "\n",
+    "def plot_setup(degrees, mics_list, gt_angles_rad):\n",
+    "    fig = plt.figure()\n",
+    "    fig.set_size_inches(3, 3)\n",
+    "    for i, (degree, mics) in enumerate(zip(degrees, mics_list)):\n",
+    "        plt.scatter(*mics.T*1e2,\n",
+    "                    label=f'{degree:.0f}deg',\n",
+    "                    color=f\"C{i}\",\n",
+    "                    marker=\"x\")\n",
+    "    l = plt.legend(bbox_to_anchor=[-0.3, 1], loc='lower left', title='mic rotations', ncol=len(degrees))\n",
+    "    plt.axis('equal')\n",
+    "    mic_radius = np.max(np.linalg.norm(mics, axis=1)) * 1e2\n",
+    "    for gt_angle_rad in gt_angles_rad:\n",
+    "        plt.arrow(0, 0, \n",
+    "                  mic_radius * np.cos(gt_angle_rad), \n",
+    "                  mic_radius * np.sin(gt_angle_rad), color='k', width=0.1)\n",
+    "                  #label='source')\n",
+    "    plt.xlabel('x [cm]')\n",
+    "    plt.ylabel('y [cm]')\n",
+    "    #plt.gca().add_artist(l)\n",
+    "    #plt.title('simulation setup')\n",
+    "    #plt.legend(loc='upper left')\n",
+    "    return fig\n",
+    "    \n",
+    "fig = plot_setup(degrees, mics_list, [gt_angle_rad])\n",
+    "save_fig(fig, f'{dir_name}/setup_noiseless_one.pdf')\n",
     "pass"
    ]
   },
@@ -727,7 +735,6 @@
    "source": [
     "from audio_stack.beam_former import BeamFormer\n",
     "\n",
-    "\n",
     "def separate_doa(plot=False, polar=True):\n",
     "    for buffer_f, mics, degree in zip(buffer_f_list, mics_list, degrees):\n",
     "        beam_former = BeamFormer(mic_positions=mics)\n",
@@ -749,6 +756,7 @@
     "                plt.colorbar()\n",
     "\n",
     "            fig = plt.figure()\n",
+    "            fig.set_size_inches(3, 3)\n",
     "            plot_spectrum(spectrum, polar, title=f'drone rotation {degree}deg')\n",
     "\n",
     "\n",
@@ -787,13 +795,14 @@
     "            plt.matshow(np.angle(R_multimic[0]))\n",
     "\n",
     "        fig = plt.figure()\n",
+    "        fig.set_size_inches(3, 3)\n",
     "        plot_spectrum(spectrum_multimic,\n",
     "                      polar,\n",
     "                      title=f'{mics_array.shape[0]}-microphone array')\n",
     "        save_fig(fig, f'{dir_name}/multimic{extension}')\n",
     "\n",
     "\n",
-    "multi_mic_doa(plot=True, extension='_one.pdf')"
+    "multi_mic_doa(plot=True, extension='_noiseless_one.pdf')"
    ]
   },
   {
@@ -821,6 +830,7 @@
     "\n",
     "    if plot:\n",
     "        fig = plt.figure()\n",
+    "        fig.set_size_inches(3, 3)\n",
     "\n",
     "    for i, (sig_f, time) in enumerate(zip(buffer_f_list, times_list_noisy)):\n",
     "        beam_former.add_to_multi_estimate(sig_f, frequencies, time, degrees[i])\n",
@@ -830,24 +840,25 @@
     "                                                            method=method)\n",
     "\n",
     "        if plot:\n",
-    "            plot_spectrum(spec, polar, title='shifted spectra')\n",
+    "            plot_spectrum(spec, polar, title='raw spectra')\n",
     "\n",
     "    spectrum_dynamic = beam_former.get_dynamic_estimate()\n",
     "    spectrum_delayed = beam_former.get_multi_estimate(method=method)\n",
     "\n",
     "    if plot:\n",
-    "        save_fig(fig, f'{dir_name}/shifted{extension}')\n",
+    "        save_fig(fig, f'{dir_name}/raw{extension}')\n",
     "\n",
     "        fig = plt.figure()\n",
-    "        plot_spectrum(spectrum_dynamic, polar, title='spectrum dynamic')\n",
-    "        save_fig(fig, f'{dir_name}/dynamic{extension}')\n",
+    "        fig.set_size_inches(3, 3)\n",
+    "        plot_spectrum(spectrum_dynamic, polar, title='angle shift')\n",
+    "        save_fig(fig, f'{dir_name}/angle{extension}')\n",
     "\n",
     "        fig = plt.figure()\n",
-    "        plot_spectrum(spectrum_delayed, polar, title='spectrum delayed')\n",
-    "        save_fig(fig, f'{dir_name}/delayed{extension}')\n",
+    "        fig.set_size_inches(3, 3)\n",
+    "        plot_spectrum(spectrum_delayed, polar, title='time shift')\n",
+    "        save_fig(fig, f'{dir_name}/time{extension}')\n",
     "\n",
-    "\n",
-    "kinetic_doa(plot=True, extension='_one.pdf')"
+    "kinetic_doa(plot=True, extension='_noiseless_one.pdf')"
    ]
   },
   {
@@ -865,38 +876,31 @@
    "source": [
     "polar = True\n",
     "method = \"das\"\n",
+    "source_type = \"many\" #\"close\"\n",
     "\n",
-    "gt_angles_deg = [10, 90]  #, 180, 270]\n",
+    "if source_type == \"close\":\n",
+    "    gt_angles_deg = [10, 40]  #, 180, 270]\n",
+    "if source_type == \"many\": \n",
+    "    # with 40 it is ok, with 50 it is better! find out why\n",
+    "    gt_angles_deg = np.arange(10, 190, step=50)  #, 180, 270]\n",
+    "    \n",
+    "gt_angles_rad = np.array(gt_angles_deg) / 180 * np.pi\n",
     "phase_offsets = np.random.uniform(0, 2 * np.pi, size=len(gt_angles_deg))\n",
     "sources = []\n",
-    "simulation_type = \"analytical\"\n",
-    "\n",
-    "plt.figure()\n",
-    "plt.scatter(*mics_drone.T)\n",
-    "for gt_angle_deg in gt_angles_deg:\n",
-    "    gt_angle_rad = gt_angle_deg * np.pi / 180.0\n",
+    "    \n",
+    "for gt_angle_rad in gt_angles_rad:\n",
     "    source = gt_distance * np.array(\n",
     "        [np.cos(gt_angle_rad), np.sin(gt_angle_rad)])\n",
     "    sources.append(source)\n",
-    "    plt.scatter(*source)\n",
-    "    plt.axis('equal')\n",
+    "fig = plot_setup(degrees, mics_list, gt_angles_rad)\n",
+    "save_fig(fig, f'{dir_name}/setup_{source_type}.pdf')\n",
     "\n",
     "buffer_f_list, buffer_f_multimic = get_buffers(mics_list,\n",
     "                                               times_list,\n",
     "                                               frequency_hz,\n",
     "                                               simulation_type,\n",
-    "                                               sanity_check=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "separate_doa(plot=True, polar=polar)"
+    "                                               sanity_check=False)\n",
+    "multi_mic_doa(plot=True, polar=polar, extension=f'_{source_type}.pdf')"
    ]
   },
   {
@@ -905,7 +909,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "multi_mic_doa(plot=True, polar=polar, extension='_two.pdf')"
+    "kinetic_doa(plot=True, polar=polar, extension=f'_{source_type}.pdf')"
    ]
   },
   {
@@ -914,15 +918,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kinetic_doa(plot=True, polar=polar, extension='_two.pdf')"
+    "gt_angles_deg = [120]\n",
+    "degrees = [30, 60, 90]\n",
+    "movement = 1e-2 # time delay breaks down for 1e-1! \n",
+    "lateral_movement = movement * np.arange(3) # in m\n",
+    "\n",
+    "sources = []\n",
+    "for gt_angle_deg in gt_angles_deg:\n",
+    "    gt_angle_rad = gt_angle_deg / 180 * np.pi\n",
+    "    sources.append(gt_distance * np.array(\n",
+    "        [np.cos(gt_angle_rad), np.sin(gt_angle_rad)]))\n",
+    "\n",
+    "# create noisy versions\n",
+    "mics_drone_noisy = deepcopy(mics_drone)\n",
+    "times_list_noisy = deepcopy(times_list)\n",
+    "degrees_noisy = deepcopy(degrees)\n",
+    "lateral_noisy = deepcopy(lateral_movement)\n",
+    "if mics_noise > 0:\n",
+    "    mics_drone_noisy += np.random.normal(scale=mics_noise,\n",
+    "                                         size=mics_drone.shape)\n",
+    "if time_noise > 0:\n",
+    "    times_list_noisy += np.random.normal(scale=time_noise,\n",
+    "                                         size=times_list.shape)\n",
+    "if time_quantization > 0:\n",
+    "    times_list_noisy = np.round(times_list_noisy, time_quantization)\n",
+    "if degree_noise > 0:\n",
+    "    degrees_noisy += np.random.normal(scale=degree_noise, size=degrees.shape)\n",
+    "\n",
+    "# we think we move to \"degrees\" position but we actually move to degrees_noisy.\n",
+    "mics_list = [\n",
+    "    rotate_mics(mics_drone_noisy, orientation_deg=degree) + np.array([lateral, 0])[None, :]\n",
+    "    for degree, lateral in zip(degrees_noisy, lateral_noisy)\n",
+    "]\n",
+    "mics_clean = [\n",
+    "    rotate_mics(mics_drone_noisy, orientation_deg=degree) + np.array([lateral, 0])[None, :]\n",
+    "    for degree, lateral in zip(degrees, lateral_movement)\n",
+    "]\n",
+    "\n",
+    "fig = plot_setup(degrees, mics_list, [gt_angle_rad])\n",
+    "save_fig(fig, f'{dir_name}/setup_lateral.pdf')\n",
+    "\n",
+    "\n",
+    "buffer_f_list, buffer_f_multimic = get_buffers(mics_list,\n",
+    "                                               times_list,\n",
+    "                                               frequency_hz,\n",
+    "                                               simulation_type,\n",
+    "                                               sanity_check=False)\n",
+    "multi_mic_doa(plot=True, extension='_lateral.pdf')"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# Moving noise source (like propellers)"
+    "kinetic_doa(plot=True, extension='_lateral.pdf')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -940,7 +999,6 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "\n",
     "\n",
     "def get_angle_error(spec):\n",
     "    est_angle_deg = angles[np.argmax(spec)]\n",
