Add epuck analysis

--- a/notebooks/CleanupAnalysis.ipynb
+++ b/notebooks/CleanupAnalysis.ipynb
@@ -39,16 +39,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp_name = \"2021_04_30_stepper\";  # old buzzer\n",
+    "exp_name = \"2021_06_08_epuck_stepper\";  # old buzzer\n",
+    "#exp_name = \"2021_04_30_stepper\";  # old buzzer\n",
     "#exp_name = \"2021_02_23_wall\";  # old buzzer\n",
     "#exp_name = \"2021_02_25_wall\"\n",
     "# new buzzer\n",
     "\n",
-    "mic_type = \"audio_deck\"\n",
+    "#mic_type = \"audio_deck\"\n",
+    "mic_type = \"measurement\"\n",
     "#motors = \"all45000\"\n",
     "motors = 0\n",
     "\n",
-    "source = \"sweep_new\""
+    "#source = \"sweep_new\"\n",
+    "source = \"sweep_epuck\""
    ]
   },
   {
@@ -68,7 +71,20 @@
     "all_data = pd.read_pickle(f'../experiments/{exp_name}/all_data.pkl')\n",
     "row_idx = 1\n",
     "data = all_data.loc[(all_data.mic_type==mic_type) & (all_data.motors==motors)].iloc[row_idx]\n",
-    "data"
+    "n_times, n_mics, n_freqs = data.stft.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure()\n",
+    "for t_idx in range(n_times):\n",
+    "    plt.scatter([t_idx]*n_freqs, data.frequencies_matrix[t_idx])\n",
+    "plt.xlabel('time index')\n",
+    "plt.ylabel('frequency [Hz]')"
    ]
   },
   {
@@ -91,8 +107,12 @@
    "outputs": [],
    "source": [
     "from plotting_tools import pcolorfast_custom\n",
+    "\n",
+    "mic_idx = 0\n",
+    "\n",
     "fig, ax = plt.subplots()\n",
-    "pcolorfast_custom(ax, data.seconds, freqs, spec[:, 0, :])\n",
+    "pcolorfast_custom(ax, data.seconds.astype(np.float32), freqs, np.log10(spec[:, 0, :]), n_xticks=5)\n",
+    "#pcolorfast_custom(ax, np.arange(spec.shape[-1]), freqs, np.log10(spec[:, mic_idx, :]))\n",
     "ax.set_xlabel('time')\n",
     "ax.set_ylabel('frequency')"
    ]
@@ -156,8 +176,8 @@
     "        data=data_collector.df, x=\"frequency\", y=\"magnitude\", hue=\"distance\", linewidth=0\n",
     "    )\n",
     "    ax.set_yscale('log')\n",
-    "    min_y = max(data_collector.df.magnitude.min(), 1e-2)\n",
-    "    max_y = min(data_collector.df.magnitude.max(), 200)\n",
+    "    min_y = max(np.nanmin(data_collector.df.magnitude), 10)\n",
+    "    max_y = min(np.nanmax(data_collector.df.magnitude), 1e10)\n",
     "    ax.set_ylim(min_y, max_y)"
    ]
   },
@@ -241,11 +261,14 @@
     "matrix, dists, freqs = data_collector.get_df_matrix()\n",
     "matrix_pruned, freqs_pruned, *_ = prune_df_matrix(matrix, freqs, ratio_missing_allowed=0.5)\n",
     "\n",
-    "fig, axs = plt.subplots(1, matrix.shape[0])\n",
+    "fig, axs = plt.subplots(1, matrix.shape[0], squeeze=False)\n",
+    "axs = axs[0]\n",
     "fig.set_size_inches(5 * matrix.shape[0], 5)\n",
-    "fig_pruned, axs_pruned = plt.subplots(1, matrix.shape[0])\n",
+    "fig_pruned, axs_pruned = plt.subplots(1, matrix.shape[0], squeeze=False)\n",
+    "axs_pruned = axs_pruned[0]\n",
     "fig_pruned.set_size_inches(5 * matrix.shape[0], 5)\n",
     "for i, (ax, ax_pruned) in enumerate(zip(axs, axs_pruned)):\n",
+    "    print(ax, ax_pruned)\n",
     "    plot_df_matrix(dists, freqs, matrix[i], ax=ax)\n",
     "    ax.set_ylabel('raw \\n frequency [Hz]')\n",
     "    plot_df_matrix(dists, freqs_pruned, matrix_pruned[i], ax=ax_pruned)\n",
@@ -267,18 +290,20 @@
     "bins, *_ =  generate_sweep(source)\n",
     "freqs_buzzer = get_frequencies()[bins]\n",
     "\n",
+    "plt.figure()\n",
     "if source == \"sweep_new\":\n",
     "    freqs = [2999, 3113, 3236, 3370, 3514, 3632, 3757, 3891, 3986, 4137, 4245, 4358, 4477, 4603, 4737, 4878]\n",
-    "    print('error between played and frequency bin:', freqs_buzzer - freqs)\n",
+    "    print('error between played and expected frequency bin:', freqs_buzzer - freqs)\n",
+    "    [plt.plot([f, f], [3, 4], color='C2') for f in freqs]\n",
+    "    plt.plot([], [], color='C2', label='from firmware')\n",
     "\n",
-    "plt.figure()\n",
     "[plt.plot([f, f], [1, 2], color='C0') for f in freqs_buzzer]\n",
     "[plt.plot([f, f], [2, 3], color='C1') for f in freqs_pruned]\n",
-    "[plt.plot([f, f], [3, 4], color='C2') for f in freqs]\n",
-    "plt.plot([], [], color='C0', label='buzzer') \n",
-    "plt.plot([], [], color='C1', label='pruned')\n",
-    "plt.plot([], [], color='C2', label='original')\n",
+    "plt.plot([], [], color='C0', label='theoretical') \n",
+    "plt.plot([], [], color='C1', label='measured')\n",
+    "plt.gca().yaxis.set_visible(False)\n",
     "plt.legend()\n",
+    "plt.title(source)\n",
     "pass"
    ]
   },
