--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -78,16 +78,18 @@
     "# exp_name = '2021_02_09_wall_tukey';\n",
     "# exp_name = '2021_02_09_wall';\n",
     "\n",
+    "exp_name = \"2021_06_08_epuck_stepper\"\n",
     "#exp_name = \"2021_02_23_wall\";  # old buzzer\n",
     "#exp_name = \"2021_02_25_wall\"; # new buzzer\n",
-    "exp_name = \"2021_04_30_stepper\"; # new hardware\n",
+    "#exp_name = \"2021_04_30_stepper\"; # new hardware\n",
     "#exp_name = \"2021_03_01_flying\"\n",
     "# exp_name = '2020_12_9_rotating';\n",
     "# exp_name = '2020_11_26_wall';\n",
     "# fname = f'results/{exp_name}_real.pkl'\n",
     "\n",
-    "mic_type = \"audio_deck\"\n",
-    "motors = \"all45000\""
+    "mic_type = \"measurement\"\n",
+    "#mic_type = \"audio_deck\"\n",
+    "motors = 0 #\"all45000\""
    ]
   },
   {
@@ -139,7 +141,7 @@
     "from plotting_tools import add_colorbar\n",
     "\n",
     "fig, ax_all = plt.subplots()\n",
-    "for mic_idx in range(4):\n",
+    "for mic_idx in range(df_matrix_raw.shape[0]):\n",
     "    fig, ax = plt.subplots()\n",
     "    im = ax.pcolormesh(df_dist, df_freq_raw, df_matrix_raw[mic_idx])\n",
     "    ax.set_title(f\"mic{mic_idx} original\")\n",
@@ -451,7 +453,8 @@
     "for normalization, df in results.groupby(\"normalization\", sort=False):\n",
     "    matrix = df.iloc[0].matrix\n",
     "    n_mics = matrix.shape[0]\n",
-    "    fig, axs = plt.subplots(1, n_mics, sharey=True)\n",
+    "    fig, axs = plt.subplots(1, n_mics, sharey=True, squeeze=False)\n",
+    "    axs = axs[0]\n",
     "    fig.set_size_inches(n_mics*5, 5)\n",
     "    axs[0].set_ylabel('frequency [Hz]')\n",
     "    for i in range(n_mics):\n",
@@ -472,7 +475,7 @@
     "    #save_fig(fig, f\"plots/{fname}_matrices_{normalization}.png\")\n",
     "    \n",
     "    \n",
-    "mic_idx = 1\n",
+    "mic_idx = 0\n",
     "fig, axs = plt.subplots(1, len(method_dict), sharey=True)\n",
     "fig.set_size_inches(len(method_dict)*5, 5)\n",
     "axs[0].set_ylabel('frequency [Hz]')\n",
@@ -518,7 +521,7 @@
     "\n",
     "distances_grid = np.arange(min(df_dist), max(df_dist))\n",
     "distances = df_dist\n",
-    "mic_indices = range(4)\n",
+    "mic_indices = range(df_matrix.shape[0])\n",
     "n_mics = len(mic_indices)\n",
     "\n",
     "distance_estimators = {}\n",
@@ -656,7 +659,7 @@
     "    algorithms = plot_combi.get('algorithms')\n",
     "    fname = f\"{exp_name}_{motors}_{distance:.0f}cm\"\n",
     "    \n",
-    "    fig_slice, axs_slice = plt.subplots(len(chosen_methods), n_mics, sharex=True, sharey=True)\n",
+    "    fig_slice, axs_slice = plt.subplots(len(chosen_methods), n_mics, sharex=True, sharey=True, squeeze=False)\n",
     "    fig_slice.set_size_inches(3*n_mics, 2*len(chosen_methods))\n",
     "    \n",
     "    fig_algos = {}\n",
