Start incorporating epuck_description

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -27,42 +27,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from simulation import get_setup\n",
-    "from plotting_tools import save_fig\n",
-    "\n",
-    "from crazyflie_description_py.experiments import WALL_ANGLE_DEG_STEPPER\n",
-    "\n",
-    "plot_dir = 'plots/experiments'\n",
-    "\n",
-    "distance = 15\n",
-    "yaws = np.array([0, 15, 30])\n",
-    "azimuth_deg = WALL_ANGLE_DEG_STEPPER\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "fig.set_size_inches(5, 5)\n",
-    "source, mic_positions = get_setup(distance_cm=distance, azimuth_deg=azimuth_deg-yaws[0])\n",
-    "[ax.scatter(*mic[:2], label=f'mic{i}, $\\\\theta=${azimuth_deg-yaws[0]}$^\\\\circ$', marker='x') for i, mic in enumerate(mic_positions)]\n",
-    "for yaw_deg in yaws[1:]:\n",
-    "    source, mic_positions = get_setup(distance_cm=distance, azimuth_deg=azimuth_deg-yaw_deg, ax=ax)\n",
-    "ax.set_title(f\"wall distance $d=${distance}cm and drone angles $\\\\theta$={yaws}deg\")\n",
-    "handles, labels = ax.get_legend_handles_labels()\n",
-    "h_mics = {l: h for h, l in zip(handles, labels) if '\\\\theta' in l}\n",
-    "l1 = ax.legend(h_mics.values(), h_mics.keys(),loc=\"lower right\", bbox_to_anchor=[.5, 0])\n",
-    "\n",
-    "h_other = {l: h for h, l in zip(handles, labels) if not 'mic' in l}\n",
-    "ax.legend(h_other.values(), h_other.keys(),loc=\"lower left\", bbox_to_anchor=[.5, 0])\n",
-    "ax.add_artist(l1)\n",
-    "ax.set_xlabel(\"x [m]\")\n",
-    "ax.set_ylabel(\"y [m]\")\n",
-    "save_fig(fig, f'{plot_dir}/setup.pdf')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -75,6 +39,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "platform = 'epuck'\n",
+    "plot_dir = 'plots/experiments_epuck'\n",
+    "\n",
+    "#platform = 'crazyflie'\n",
+    "#plot_dir = 'plots/experiments'\n",
+    "\n",
     "# exp_name = '2021_02_09_wall_tukey';\n",
     "# exp_name = '2021_02_09_wall';\n",
     "\n",
@@ -89,7 +59,46 @@
     "\n",
     "mic_type = \"measurement\"\n",
     "#mic_type = \"audio_deck\"\n",
-    "motors = 0 #\"all45000\""
+    "motors = 0 #\"all45000\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from simulation import get_setup\n",
+    "from plotting_tools import save_fig\n",
+    "\n",
+    "if platform == 'epuck':\n",
+    "    from epuck_description_py import experiments, parameters\n",
+    "elif platform == 'crazyflie':\n",
+    "    from crazyflie_description_py import experiments, parameters\n",
+    "else:\n",
+    "    raise ValueError(platform)\n",
+    "\n",
+    "distance = 15\n",
+    "yaws = np.array([0, 15, 30])\n",
+    "azimuth_deg = experiments.WALL_ANGLE_DEG_STEPPER\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "fig.set_size_inches(5, 5)\n",
+    "source, mic_positions = get_setup(distance_cm=distance, azimuth_deg=azimuth_deg-yaws[0], platform=platform)\n",
+    "[ax.scatter(*mic[:2], label=f'mic{i}, $\\\\theta=${azimuth_deg-yaws[0]}$^\\\\circ$', marker='x') for i, mic in enumerate(mic_positions)]\n",
+    "for yaw_deg in yaws[1:]:\n",
+    "    source, mic_positions = get_setup(distance_cm=distance, azimuth_deg=azimuth_deg-yaw_deg, ax=ax, platform=platform)\n",
+    "ax.set_title(f\"wall distance $d=${distance}cm and drone angles $\\\\theta$={yaws}deg\")\n",
+    "handles, labels = ax.get_legend_handles_labels()\n",
+    "h_mics = {l: h for h, l in zip(handles, labels) if '\\\\theta' in l}\n",
+    "l1 = ax.legend(h_mics.values(), h_mics.keys(),loc=\"lower right\", bbox_to_anchor=[.5, 0])\n",
+    "\n",
+    "h_other = {l: h for h, l in zip(handles, labels) if not 'mic' in l}\n",
+    "ax.legend(h_other.values(), h_other.keys(),loc=\"lower left\", bbox_to_anchor=[.5, 0])\n",
+    "ax.add_artist(l1)\n",
+    "ax.set_xlabel(\"x [m]\")\n",
+    "ax.set_ylabel(\"y [m]\")\n",
+    "save_fig(fig, f'{plot_dir}/setup.pdf')"
    ]
   },
   {
@@ -168,7 +177,6 @@
    },
    "outputs": [],
    "source": [
-    "from crazyflie_description_py.experiments import WALL_ANGLE_DEG_STEPPER\n",
     "from simulation import get_dist_slice_theory\n",
     "from copy import deepcopy\n",
     "from pandas_utils import fill_nans\n",
@@ -219,7 +227,7 @@
     "    slice_exp = df_matrix[:, i, :]\n",
     "    if np.any(np.isnan(slice_exp)):\n",
     "        slice_exp = fill_nans(slice_exp, df_dist)\n",
-    "    slice_the = get_dist_slice_theory(f, df_dist, azimuth_deg=WALL_ANGLE_DEG_STEPPER).T\n",
+    "    slice_the = get_dist_slice_theory(f, df_dist, azimuth_deg=experiments.WALL_ANGLE_DEG_STEPPER).T\n",
     "    \n",
     "    fig_f = plot_ffts(\n",
     "        slice_exp=slice_exp,\n",
@@ -626,7 +634,7 @@
     "for key, df in err_df.groupby(\"algorithm\"):\n",
     "    for mic, df_mic in df.groupby(\"mic\"):\n",
     "        absolute_err = pd.pivot_table(df_mic, index=\"distance\", values=\"error\", columns=\"method\")\n",
-    "        fig, axs = plot_performance(absolute_err, xs=distances, xlabel=\"distance [cm]\", ylabel=\"absolute error [cm]\")\n",
+    "        fig, axs = plot_performance(absolute_err, xs=distances, xlabel=\"distance [cm]\", ylabel=\"error [cm]\")\n",
     "        axs[0, 0].grid()\n",
     "        fig.suptitle(f'microphone: {mic}, {titles[key]}')\n",
     "        axs[0, 1].set_xlim(-1, max(distances))\n",
