Generate measurement mic plots

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -257,7 +257,7 @@
     "from estimators import get_estimate\n",
     "from simulation import factor_distance_to_delta\n",
     "\n",
-    "azimuth_deg = WALL_ANGLE_DEG_STEPPER\n",
+    "azimuth_deg = experiments.WALL_ANGLE_DEG_STEPPER\n",
     "\n",
     "titles = {\n",
     "    'cost': 'optimization-based method',\n",
@@ -339,6 +339,8 @@
     "    fname = f\"{exp_name}_{motors}\"\n",
     "    fig, axs = plot_performance(err_dict, xs=df_freq, \n",
     "               xlabel=\"frequency [Hz]\", ylabel=\"error [deg]\")\n",
+    "    axs[0, 0].grid()\n",
+    "    axs[0, 0].legend(['measurement mic'])\n",
     "    fig.suptitle(titles[algo])\n",
     "    axs[0, 1].set_xlim(0,  90)\n",
     "    axs[0, 0].set_ylim(-90,  90)\n",
@@ -374,6 +376,7 @@
     "fig.set_size_inches(10, 5)\n",
     "calib_function_median, freqs = get_calibration_function_median(exp_name, mic_type, ax=axs[0])\n",
     "axs[0].set_title(\"calibration-individual\")\n",
+    "axs[0].legend([\"measurement mic\"])\n",
     "\n",
     "calib_function_median_one, freqs = get_calibration_function_median(\n",
     "    exp_name, mic_type, ax=axs[1], fit_one_gain=True\n",
@@ -406,7 +409,7 @@
     "    'raw': \"\",\n",
     "    'theoretical': \"\",\n",
     "    'calibration-individual': calib_function_median,\n",
-    "    'calibration-global': calib_function_median_one,\n",
+    "    #'calibration-global': calib_function_median_one,\n",
     "    #'calibration-fit': calib_function_fit,\n",
     "    #'calibration-fit-one': calib_function_fit_one,\n",
     "    # deprecated:\n",
@@ -478,6 +481,7 @@
     "            vmax=max_value,\n",
     "        )\n",
     "        ax.set_title(f\"mic{i} {normalization}\")\n",
+    "        ax.set_title(f\"measurement mic {normalization}\")\n",
     "        ax.set_xlabel('distance [cm]')\n",
     "    add_colorbar(fig, ax, im)\n",
     "    #save_fig(fig, f\"plots/{fname}_matrices_{normalization}.png\")\n",
@@ -511,7 +515,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.2 Performance\n"
+    "## 3.2 Performance"
    ]
   },
   {
@@ -653,8 +657,6 @@
     "from simulation import get_freq_slice_theory\n",
     "from matplotlib.ticker import FormatStrFormatter\n",
     "\n",
-    "mic_idx = 1\n",
-    "\n",
     "chosen_methods = [\"raw\", \"calibration-global\", \"theoretical\"]\n",
     "#chosen_methods = method_dict.keys()\n",
     "plot_combis = [{\n",
@@ -726,7 +728,8 @@
     "                        freqs, \n",
     "                        mic_idx=mic_idx,\n",
     "                        distance_range=[min(distances_grid), max(distances_grid)],\n",
-    "                        sigma=std\n",
+    "                        sigma=std,\n",
+    "                        azimuth_deg=azimuth_deg\n",
     "                    )\n",
     "                    distance_estimators[method].add_distribution(diff_bayes * 1e-2, proba, mic_idx)\n",
     "                    \n",
@@ -740,6 +743,7 @@
     "                axs_algo[i_method, 0].set_ylabel(f'{method}')\n",
     "            axs_algo[0, i_mic].set_title(f\"mic{mic_idx}\")\n",
     "    \n",
+    "    ax_combi[0, 0].set_title('combination')\n",
     "    for i_method, (method, distance_estimator) in enumerate(distance_estimators.items()):\n",
     "        distances_m, proba = distance_estimator.get_distance_distribution(verbose=False)\n",
     "        distances_cm = distances_m * 1e2\n",
