Adjust sweep parameters

--- a/notebooks/CleanupAnalysis.ipynb
+++ b/notebooks/CleanupAnalysis.ipynb
@@ -45,9 +45,9 @@
     "#exp_name = \"2021_02_25_wall\"\n",
     "# new buzzer\n",
     "\n",
-    "mic_type = \"audio_deck\"\n",
-    "motors = \"all45000\"\n",
-    "#motors = 0\n",
+    "#mic_type = \"audio_deck\"\n",
+    "#motors = \"all45000\"\n",
+    "motors = 0\n",
     "\n",
     "source = \"sweep_new\"\n",
     "fname = f'plots/experiments/{exp_name}_{motors}'"
@@ -84,6 +84,22 @@
     "spec, freqs = get_spectrogram_raw(data.frequencies_matrix, data.stft)\n",
     "spec = np.abs(spec)\n",
     "print(spec.shape, freqs.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "for i in range(spec.shape[2]):\n",
+    "    ax.plot(freqs[freqs>0], spec[freqs>0, 0, i])\n",
+    "ax.set_yscale('log')\n",
+    "#ax.set_ylim(0.3, 10)\n",
+    "ax.set_ylim(1e-3, 100)\n",
+    "ax.set_xlabel('frequency [Hz]')\n",
+    "ax.set_ylabel('amplitude')"
    ]
   },
   {
