--- a/notebooks/WindowAnalysis.ipynb
+++ b/notebooks/WindowAnalysis.ipynb
@@ -34,7 +34,10 @@
    "source": [
     "def get_window_name(row):\n",
     "    from audio_stack.parameters import WINDOW_TYPES\n",
-    "    window_number = int(row.appendix.replace(\"_window\", \"\"))\n",
+    "    try:\n",
+    "        window_number = int(row.appendix.replace(\"_window\", \"\"))\n",
+    "    except:\n",
+    "        window_number = 3\n",
     "    return WINDOW_TYPES[window_number]"
    ]
   },
@@ -44,7 +47,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp_name = '2021_02_19_windows';\n",
+    "#exp_name = '2021_02_19_windows';\n",
+    "exp_name = '2021_06_09_stepper';\n",
     "fname = f\"../experiments/{exp_name}/all_data.pkl\"\n",
     "\n",
     "try:\n",
