Start new analysis

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -80,11 +80,12 @@
     "\n",
     "#exp_name = \"2021_02_23_wall\";  # old buzzer\n",
     "#exp_name = \"2021_02_25_wall\"; # new buzzer\n",
-    "exp_name = \"2021_04_30_stepper\"; # new hardware\n",
+    "#exp_name = \"2021_04_30_stepper\"; # new hardware\n",
     "#exp_name = \"2021_03_01_flying\"\n",
-    "# exp_name = '2020_12_9_rotating';\n",
-    "# exp_name = '2020_11_26_wall';\n",
-    "# fname = f'results/{exp_name}_real.pkl'\n",
+    "#exp_name = '2020_12_9_rotating';\n",
+    "#exp_name = '2020_11_26_wall';\n",
+    "\n",
+    "exp_name = \"2021_06_17_stepper\"; # new sweep\n",
     "\n",
     "mic_type = \"audio_deck\"\n",
     "motors = \"all45000\""
